style: add final keyword and revise hard coding
final 키워드 추가 및 하드코딩된 코드 수정

related to #20